--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/CSS.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <title>Pokedex</title>
   <link rel="icon" type="image/x-icon" href="images/pokeball.png">
   <link href="css/bootstrap.min.css" rel="stylesheet">
