--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <header id="nav-wrapper">
     <nav id="nav">
       <div class="nav left">
-        <div class="gradient skew"><h1 class="logo un-skew"><a href="index.html"><img alt="Pokeball Logo" src="images/pokeball.png" width="50"> <b>Pokedex</b> </a></h1></div>
-      </div>
+        <span class="gradient skew"><h1 class="logo un-skew"><a href="index.html"><img alt="Pokeball Logo" src="images/pokeball.png" width="50"> <b>Pokedex</b> </a></h1></div>
+      </span>
       <div class="nav right" id="topnav">
         <a href="index.html" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Pokemon</span></span></a>
         <a href="catch.html" class="nav-link "><span class="nav-link-span"><span class="u-nav">Start Your Adventure</span></span></a>
