--- a/index.html
+++ b/index.html
@@ -5,173 +5,81 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/CSS.css" rel="stylesheet">
   <title>Pokedex</title>
   <link rel="icon" type="image/x-icon" href="images/pokeball.png">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  
 </head>
 
 <body>
+  
   <header id="nav-wrapper">
-    <nav id="nav">
-      <div class="nav left">
-        <span class="gradient skew"><h1 class="logo un-skew"><a href="index.html"><img alt="Pokeball Logo" src="images/pokeball.png" width="50"> <b>Pokedex</b> </a></h1></div>
-      </span>
-      <div class="nav right" id="topnav">
-        <a href="index.html" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Pokemon</span></span></a>
-        <a href="catch.html" class="nav-link "><span class="nav-link-span"><span class="u-nav">Start Your Adventure</span></span></a>
-      </div>
-
-
-      <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
-        <div class="btn-nav"><img alt="Pokeball Logo" src="images/pokeball.png" width="50"></div>
-  
-  
-    <ul class="mobile-menu">
-    <li><a href="#home" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Start</span></span></a></li>
-    <li><a href="index.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">Pokemon</span></span></a></li>
-    <li><a href="#work" class="nav-link"><span class="nav-link-span"><span class="u-nav">Catch them all!</span></span></a></li>
-  </ul>
-  </div>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="index.html"><b><img alt="Pokeball Logo" src="images/pokeball.png" width="50"> Pokedex</b> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
+        </div>
     </nav>
 
   </header>
 
 <!-- Photo Grid -->
-<main>
+<main class="list">
   <div class="container-fluid">
 
     <div class="jumbotron">
-      <h2 class="text-center" id="title">Pokedex</h2>
+      <h2 class="text-center" id="title">Welcome to the Pokedex</h2>
       <p class="text-center" id="more">Here you can find information on a variety of Pokemon.</p>
     </div>
 
-    <div class="row" >
-      <div class="col-sm-6 col-md-4 col-lg-3"><span class="badge bg-secondary">New</span>
-        <figure>
-          <a href="info.html"><img src="images/pokeball_2.png" class="img-thumbnail grayscale"></a>
-          <figcaption>Pokemon 1</figcaption>
-        </figure>
+    <div class="row"id="plist">
+
+    </div>
+  
+    <div class="d-grid gap-2 col-8 mx-auto">
+      <button type="button" id="loadMore" class="btn btn-danger btn-lg"> <img alt="Pokeball Logo" src="images/pokeball.png" width="30"> See More</button>
+    </div>
+
+<!-- The Modal -->
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Catch Them All!</h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 2</figcaption>
-        </figure>
+
+      <!-- Modal body -->
+      <div class="modal-body" id="info-card">
+
+
+
       </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-            <figcaption>Pokemon 3</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 4</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 5</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 6</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 7</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 8</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 9</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 10</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 11</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 12</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 13</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 14</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 15</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 16</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 17</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 18</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 19</figcaption>
-        </figure>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3">
-        <figure>
-          <img src="images/pokeball_2.png" class="img-thumbnail grayscale">
-           <figcaption>Pokemon 20</figcaption>
-        </figure>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
       </div>
 
     </div>
   </div>
-  <div class="d-grid gap-2 col-6 mx-auto" id="more">
-  <button type="button" class="btn btn-danger btn-lg"> <img alt="Pokeball Logo" src="images/pokeball.png" width="30"> View More</button>
+</div>
+
+
 </div>
   </main>
 
@@ -184,7 +92,7 @@
      </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script> 
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
